Remove Task + Fix link button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <title>Hello, world!</title>
   </head>
@@ -31,15 +32,15 @@
                         <ul class="list-group">
                             <li class="list-group-item">
                                 Cras justo odio
-                                <button class="float-right btn btn-danger btn-sm delete-task">x</button>
+                                <a href="#" class="float-right delete-task"><i class="fas fa-minus-square"></i></a>
                             </li>
                             <li class="list-group-item">
                                 Dapibus ac facilisis in
-                                <button class="float-right btn btn-danger btn-sm delete-task">x</button>
+                                <a href="#" class="float-right delete-task"><i class="fas fa-minus-square"></i></a>
                             </li>
                             <li class="list-group-item">
                                 Vestibulum at eros
-                                <button class="float-right btn btn-danger btn-sm delete-item">x</button>
+                                <a href="#" class="float-right delete-task"><i class="fas fa-minus-square"></i></a>
                             </li>
                         </ul>
                         <hr>
