--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </li>
                         </ul>
                         <hr>
-                        <button class="btn btn-info clear-task">Clear Task</button>
+                        <button class="btn btn-info" id="clear-task">Clear Task</button>
                     </div>
                 </div>
             </div>
